# event-sourcing-demo

./: Dockerfile  Makefile  README.md  dev_start.sh  docker-compose.yml  granian_run.sh  gunicorn_conf.py  main.py  pyproject.toml
src/: app.py  logging_conf.py  settings.py
src/database/: session.py
src/database/models/: account.py  bank.py  transfer.py
src/routes/: main.py
