[project]
name = "event-sourcing-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "boto3>=1.42.11",
    "eventsourcing>=9.5.3",
    "eventsourcing-sqlalchemy>=0.15",
    "fastapi>=0.124.4",
    "google-cloud-secret-manager>=2.25.0",
    "granian[reload,uvloop]>=2.7.2",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel>=0.0.37",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.9",
    "scalene>=1.5.55",
]

[tool.pytest.ini_options]
testpaths = [ "src/tests" ]
pythonpath = [ "." ]

[tool.ruff]
lint.select = ["I"]
